--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Infinitivve Checker
+name: Infinitive Checker
 
 on: [push]
 
@@ -21,7 +21,7 @@ jobs:
       uses: actions/checkout@master
       with:
         repository: pumperknickle/RQTAPI
-        path: /RQTAPI
+        path: /home/runner/work/infinitive-checker/infinitive-checker/RQTAPI
         
     - name: Install dependencies
       run: |
